src/test/deca/context/invalid/provided/affect-incompatible6.deca
/*/ Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 15: Affectation de types incompatibles.
//
// Historique:
//    cree le 01/01/2022*/
{
   float a;


   /* Doit etre refuse.*/

   a = "yes";
}
